@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 0.5.6 June 19, 2014
+
+* add files to integrate Pundit with OmniAuth
+
 h3. 0.5.5 June 19, 2014
 
 * don't generate 'users' pages when generating 'authorized' pages
